# ffmpegAddon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  parsers.js
.github/workflows/: build-ffmpeg-and-addon.yml
patches/: 0001-Update-configure.patch  0002-Set-LIBPREF-and-LIBSUF-for-mingw32-target-in-configu.patch  0003-Add-SILK-v3-codec-stub-with-third_party-integration.patch  0004-Add-SILK-audio-codec-encoder-and-decoder.patch  0004-Fix-empty-struct-in-NTSilkDemuxerContext-for-MSVC.patch  0004-Update-SILK-decoder-include-paths.patch  0005-Add-SILK-demuxer-muxer-and-improve-codec-endianness-.patch  0005-Refactor-and-enhance-SILK-codec-integration.patch  0005-Update-codec_desc.c.patch  0006-Add-SILK-demuxer-and-muxer-to-Makefile.patch  0006-Fix-codec_id-includes-and-AVCodecID-usage-in-SILK-co.patch  0007-Fix-variable-redefinitions-and-function-signature-in.patch  0007-Update-allformats.c.patch  0008-Add-SILK-audio-codec-descriptor-and-update-Makefile.patch  0008-Refactor-SILK-demuxer-and-muxer-to-new-FFmpeg-API.patch  0009-Update-Makefile.patch  0010-Update-Makefile.patch  0011-Update-Makefile.patch  0012-update.patch
scripts/: build_ffmpeg_linux.sh  build_ffmpeg_linux_arm64.sh  build_ffmpeg_mac.sh  build_ffmpeg_mingw.sh  build_ffmpeg_msvc.sh  build_ffmpeg_unix.sh  build_ffmpeg_win.sh  develop-patch-ffmpeg.bat
src/: convertFile.cpp  convertFile.h  convertNTSilk.cpp  convertNTSilk.h  decodeAudio.cpp  decodeAudio.h  decodePCM.h  ffmpegAddon.cpp  ffmpegCommon.h  getDuration.cpp  getDuration.h  videoInfo.cpp  videoInfo.h
test/: 1.js  test.js  test.ntsilk  test_convert.js  test_decode_audio.js  test_out.ntsilk
